--- a/tutorials/IBER24.html
+++ b/tutorials/IBER24.html
@@ -1502,6 +1502,9 @@ text-align: justify
 margin-right: 10px;
 }
 </style>
+<p><img height="300" width="1600" src="images/logo_hex.png"> </a>
+<font size="3"> <br /></p>
+<p><img src="%22logo_hex.png%22" /></p>
 <div id="presentación" class="section level1">
 <h1>Presentación</h1>
 <p>En este espacio se encuentran los contenidos teóricos y prácticos
