--- a/tutorials/IBER24.html
+++ b/tutorials/IBER24.html
@@ -1520,10 +1520,11 @@ ocupación, <em>N-mixture</em> y <em>spatial capture-recapture</em>.</p>
 <p><strong>Para quién:</strong> Este es un taller pensado para ecólogos.
 No se requiere experiencia previa en Inferencia Bayesiana o NIMBLE. Algo
 de experiencia en R es necesaria.</p>
-<p><strong>Quién:</strong> Valentin Lauret (IREC), Javi Fernandez-Lopez
-(IREC)</p>
+<p><strong>Quién:</strong> Impertido por <a href="https://scholar.google.com/citations?hl=es&amp;user=hbi_zlMAAAAJ">Valentin
+Lauret (IREC)</a> y <a href="https://scholar.google.com/citations?user=v3biyuIAAAAJ&amp;hl=es&amp;authuser=1">Javi
+Fernandez-Lopez (IREC)</a></p>
 <p><strong>Cuándo</strong> 13-15 de Mayo, 2024. De 9h30 a 13h30.</p>
-<p><strong>Where:</strong> Salón de Actos del Instituto de
+<p><strong>Dónde:</strong> Salón de Actos del Instituto de
 Investigaciones en Recursos Cinegéticos, IREC, Royal City ;)</p>
 </div>
 <div id="programa" class="section level1">
@@ -1549,7 +1550,8 @@ es Bayesiano, qué es NIMBLE, aplicaciones en ecología.</li>
 <div id="día-3---aplicaciones" class="section level3">
 <h3>Día 3 - Aplicaciones</h3>
 <ol style="list-style-type: decimal">
-<li>Un caso de estudio, impartido por Pepe Jiménez.</li>
+<li>Un caso de estudio, impartido por <a href="https://scholar.google.com/citations?user=ACYEKqAAAAAJ&amp;hl=es">Pepe
+Jiménez</a>.</li>
 <li>Trabajo personal con datos propios (o provistos por los
 ponentes).</li>
 </ol>
