--- a/tutorials/IBER24.html
+++ b/tutorials/IBER24.html
@@ -1504,8 +1504,8 @@ los materiales se utilizarán durante el taller:</p>
 (próximamente).</li>
 <li><a href>Scripts</a> y <a href>datos</a> necesarios para las
 sesiones prácticas (próximamente).</li>
-<li><a href><em>Cheatsheet</em></a> sobre distribuciones de
-probabilidad (<em>by</em> <a href="https://scholar.google.com/citations?user=ew25H7QAAAAJ&amp;hl=es">Sonia
+<li><a href="https://jabiologo.github.io/web/tutorials/prob_dist.pdf"><em>Cheatsheet</em></a>
+sobre distribuciones de probabilidad (<em>by</em> <a href="https://scholar.google.com/citations?user=ew25H7QAAAAJ&amp;hl=es">Sonia
 Illanas (IREC)</a> &amp; <a href="https://scholar.google.com/citations?user=v3biyuIAAAAJ&amp;hl=es&amp;authuser=1">Javier
 Fernández-López (IREC)</a>)</li>
 </ul>
