--- a/tutorials/ENZOEM25.html
+++ b/tutorials/ENZOEM25.html
@@ -1518,10 +1518,10 @@ datos</li>
 - Test estadísticos en ciencias experimentales (11, 13 y 16 de
 junio)</a></h3>
 <ol style="list-style-type: decimal">
-<li>Distribuciones de probabilidad y estadística básica</li>
+<li>Generalidades</li>
 <li>Principales test paramétricos y no paramétricos</li>
 <li>El modelo lineal generalizado</li>
-<li>Diseños avanzados: medidas repetidas</li>
+<li>Diseños avanzados: GLS y GLMM</li>
 </ol>
 </div>
 <div id="módulo-3---modelos-avanzados-en-estudios-observacionales-2-y-4-de-septiembre" class="section level3">
