--- a/tutorials/practicas_geoestadistica.html
+++ b/tutorials/practicas_geoestadistica.html
@@ -2002,6 +2002,9 @@ datos &lt;- datos[,c(1,3)]
 # Crear una columna nueva que sea el peso en kg
 datos$peso_kg &lt;- datos$peso/1000
 
+# Crear una columna nueva que sea un identificador para cada individuo
+datos$id &lt;- 1:nrow(datos)
+
 # Filtrar nuestro data.frame para uqedarnos con aquellos individuos que
 # estén en hábitats Agrícolas y Urbanos
 
